fix: fix gaps

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -35,8 +35,8 @@ a {
     gap: 10px;
     width: fit-content;
     position: absolute;
-    top: 3px;
-    right: 10px;
+    top: -20px;
+    left: 100%;
 
     background: $color-brand-2;
     border-radius: 120px;
